--- a/FCC-Project-2/package.json
+++ b/FCC-Project-2/package.json
@@ -13,12 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@hrwg/vue-marked": "^0.0.2",
+    "dompurify": "^3.1.6",
+    "markdown": "^0.5.0",
+    "marked": "^13.0.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
+    "@types/sanitize-html": "^2.11.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -26,7 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
